# ee6470

hw01/: README.md
hw01/part1/: Filter.cpp  Filter.h  Testbench.cpp  Testbench.h  main.cpp
hw01/part2/: CMakeLists.txt  Testbench.cpp  Testbench.h  Top.cpp  Top.h  main.cpp
hw02/: README.md  Testbench.cpp  Testbench.h  Top.cpp  Top.h  filter_def.h  main.cpp
hw03/: GaussianFilter.cpp  GaussianFilter.h  README.md  System.cpp  System.h  Testbench.cpp  main.cpp
hw03/stratus/: Makefile.prj  project.tcl
hw04/: README.md
hw04/sw/basic-gaussian/: Makefile  main  main.cpp
hw04/vp/src/platform/: CMakeLists.txt
hw04/vp/src/platform/basic-gaussian/: CMakeLists.txt  GaussianFilter.h  filter_def.h  main.cpp
proj01/: README.md
proj01/syn/: def.h  gauss_old.txt  gauss_seidel.cpp  gauss_seidel.h  main.cpp  system.cpp  system.h  testbench.cpp  testbench.h
proj01/syn/stratus/: Makefile.prj  project.tcl
proj01/tlm/: CMakeLists.txt  Initiator.cpp  MemoryMap.h  SimpleBus.h  def.h  gauss_seidel.cpp  gauss_seidel.h  main.cpp  system.cpp  system.h  testbench.cpp  testbench.h
proj02/: README.md
proj02/sw/basic-gaussseidel/: Makefile  bootstrap.S  main.cpp
proj02/synthesis_stratus/: def.h  gauss_seidel.cpp  gauss_seidel.h  mac.cpp  mac.h  system.cpp  system.h  testbench.cpp  testbench.h
proj02/synthesis_stratus/stratus/: Makefile.prj  project.tcl
proj02/vp/src/platform/basic-gaussseidel/: CMakeLists.txt  def.h  dma.h  gaussSeidel.h  main.cpp
